src/htdocs/css/_responsiveTableScientific.scss
.station-toggle,
.networkmagnitude-toggle {
	position:relative;
	border:1px solid #ddd;
	background:#f6f6f6;
	color:#666;
	margin:10px 0;
	padding:10px 15px;

	> h3 {
		display: block;
		margin:0;
		color: #444;
		font-weight: normal;
		padding-right: 70px;
		overflow: hidden;
		white-space: nowrap;
		text-overflow: ellipsis;

		> em {
			padding-right: 10px;
			font-weight:bold;
			font-style:normal;
		}
	}

	abbr {
		border-bottom:1px dotted #999;
	}

	> a.expand {
		display: block;
		position: absolute;
		top: 3px;
		right: 15px;
		margin: 10px 0 0px;
		padding: 0;
		color: #00f;
		cursor: pointer;
		padding: 2px;
		font-size: 12px;

		&:hover {
			text-decoration: underline;
		}

		&:before {
			display:inline-block;
			width:10px;
			content:'+ ';
		}
	}

	> .station-details,
	> .networkmagnitude-details {
		display:none;
	}
}

// toggle station details
.show-station-details,
section.show-networkmagnitude-details {
	> a.expand:before {
		content: '- ';
	}

	> .station-details,
	> .networkmagnitude-details {
		display:block;
	}
}

div.station-details {
	> dl {
		color:#666;
		font-size:13px;
		margin:15px 0;

		> dt {
			font-weight: bold;
			float: left;
			width: 60px;
		}

		> dd {
			-webkit-margin-start:0;
			-moz-margin-start:0;
			padding-left: 70px;

			&:after {
				content: '';
				display: block;
				clear: both;
			}
		}
	}
}

.station-summary,
.networkmagnitude-summary {
	list-style:none;
	margin:10px 0 0;
	padding:0;

	> li {
		display:inline-block;
		width:25%;
		max-width:100px;
		padding:5px;
		text-align:center;
		line-height:1;

		&.mmiI {
			border: 1px solid #eee;
		}

		&.mmi {

			color:#000;
			text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
			border-radius:2px;

			> abbr {
				color:#000;
			}
		}

		> span {
			display:block;
			padding:0; // override styles from dyfi responses
			max-width: 100%; // override styles from dyfi responses
		}

		> abbr {
			font-size:12px;
			color:#999;
		}
	}

	.magnitude {
		color:#000000 !important;
		background-color:#FFFFFF !important;
		box-shadow: 0 0 1px #666;
	}
}

table.station-components,
table.hypocenter-phase,
table.networkmagnitude-stations {
	margin:15px 0 0;
	font-size:13px;

	> thead {
		background:#999;

		> tr > th {
			padding:10px;
		}
	}

	> tbody {
		> tr {
			> .distance,
			> .azimuth,
			> .arrival,
			> .residual,
			> .weight {
				text-align:right;
				margin-right:0.5em;
			}
		}
	}
}

@media screen and (max-width:767px) {

	ul.station-summary,
	ul.networkmagnitude-summary {
		font-size:15px;
	}

	// Impact -> Shakemap -> Staion List
	table.station-components {
		td:nth-of-type(2):before { content: 'acc:'; }
		td:nth-of-type(3):before { content: 'vel:'; }
		td:nth-of-type(4):before { content: 'psa03:'; }
		td:nth-of-type(5):before { content: 'psa10:'; }
		td:nth-of-type(6):before { content: 'psa30:'; }
	}

	// Scientific -> Hypocenter -> Phases
	table.hypocenter-phase {
		td:nth-of-type(2):before { content: 'Distance'; }
		td:nth-of-type(3):before { content: 'Azimuth'; }
		td:nth-of-type(4):before { content: 'Phase'; }
		td:nth-of-type(5):before { content: 'Arival Time'; }
		td:nth-of-type(6):before { content: 'Status'; }
		td:nth-of-type(7):before { content: 'Residual'; }
		td:nth-of-type(8):before { content: 'Weight'; }
		> tbody {
			> tr {
				> .distance,
				> .azimuth,
				> .arrival,
				> .residual,
				> .weight {
					text-align:left;
				}
			}
		}
	}

	// Scientific -> Hypocenter -> Magnitudes
	table.networkmagnitude-stations {
		td:nth-of-type(2):before { content: 'Type'; }
		td:nth-of-type(3):before { content: 'Amplitude'; }
		td:nth-of-type(4):before { content: 'Period'; }
		td:nth-of-type(5):before { content: 'Status'; }
		td:nth-of-type(6):before { content: 'Magnitude'; }
		td:nth-of-type(7):before { content: 'Weight'; }
	}

	table.station-components,
	table.hypocenter-phase,
	table.networkmagnitude-stations {
		margin:15px 0;
		border:none;
		background:none;
		text-align:left;

		> tbody > tr {
			text-align:left;
			background:none;

			> td,
			> td:before {
				padding:5px 15px 0;
			}

			> td {
				border:none;
				padding-left:60px;
			}

			> td:first-child {
				font-weight:bold;
				border-bottom:1px solid #ccc;
				padding-left:0;
				padding-bottom:5px;
				margin-top:20px;
			}

			> td {
				padding-left:80px;
			}
			> td:before {
				padding-left:0;
			}

		}
	}

}

